<resources>
    <string name="app_name">Live Wallpaper Test</string>
    <string name="app_description">A very cool Live Wallpaper test</string>
    <string name="prefs_enable_touch">Enable Touch</string>
    <string name="prefs_number_of_circles">Number of Circles</string>
    <string name="prefs_min_speed">Min Speed</string>
    <string name="prefs_max_speed">Max Speed</string>
    <string name="prefs_max_drawing_distance">Max Drawing Distance</string>
    <string name="setWallpaper">Set Wallpaper</string>
</resources>
